# route53-migrator

./: .dockerignore  .gitignore  Dockerfile  README.md  SOP.md  pyproject.toml  route53_migrator.py
.github/workflows/: publish-ghcr.yml
route53_migrator_lib/: aws_clients.py  cli.py  core.py
tests/: test_diff.py
