[project]
name = "route53-migrator"
version = "0.1.0"
description = "Route53 hosted zone export/import helper with optional S3 artifact storage"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
route53-migrator = "route53_migrator_lib.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["route53_migrator_lib*"]
